PA_Education/TestMenifest/force-app/main/default/objects/Performance__c/Performance__c.object-meta.xml
<CustomObject>
    <description>인력, 매출 관련 필드</description>
    <label>성과</label>
    <nameField>
        <displayFormat>성과-{0000}</displayFormat>
        <label>성과</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>