PA_Education/TestMenifest/force-app/main/default/objects/Performance__c/fields/fm_Year__c.field-meta.xml
<CustomField>
    <fullName>fm_Year__c</fullName>
    <formula>YEAR( Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>년도</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>