PA_Education/TestMenifest/force-app/main/default/objects/Performance__c/fields/HeadCount__c.field-meta.xml
<CustomField>
    <fullName>HeadCount__c</fullName>
    <description>인력 Record Type 의 인원 Fields</description>
    <label>인원</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>