PA_Education/TestMenifest/force-app/main/default/objects/Performance__c/fields/Sales__c.field-meta.xml
<CustomField>
    <fullName>Sales__c</fullName>
    <description>매출 Reocrd type 의 연도 매출 Field</description>
    <label>매출</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>