PA_Education/TestMenifest/force-app/main/default/objects/Performance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>fm_Year__c</columns>
    <columns>Sales__c</columns>
    <columns>HeadCount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>